# json-canon

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: js.yml  rust.yml
jcs-test-data/: README.md  numgen.js
js/json-canon/: README.md  package.json
js/json-canon-fuzz/: README.md  package.json
js/json-canon-fuzz/src/: bin.js  index.js  json.js  numbers.js
js/json-canon/bench/: index.js
js/json-canon/examples/: basic.js
js/json-canon/src/: index.js
js/json-canon/test/: fixtures.js  fuzz.js  jcs-data.js  units.js
js/json-canon/test/helpers/: random-json.js
rust/json-canon/: Cargo.toml  README.md
rust/json-canon/benches/: basic.rs
rust/json-canon/examples/: basic.rs
rust/json-canon/src/: entry.rs  lib.rs  object.rs  pool.rs  ser.rs
rust/json-canon/tests/: fixtures.rs  jcs-data.rs  json.rs  numbers.rs  units.rs
test-data/fuzzies/: 1.json
wasm/json-canon-wasm/: Cargo.toml
wasm/json-canon-wasm/src/: lib.rs  utils.rs
