[package]
name = "json-canon"
version = "0.1.3"
authors = ["Michael Williams <hello@mikey.nz>"]
edition = "2021"
rust-version = "1.56.1"
license = "Apache-2.0"
description = "Serialize JSON into a canonical format."
repository = "https://github.com/ahdinosaur/json-canon"
keywords = ["json", "serde", "serialization", "canonical"]
categories = ["encoding"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ryu-js = { version = "0.2.2", default-features = false }
serde = { version = "1.0.162", default-features = false }
serde_json = { version = "1.0.96", default-features = false, features = ["std", "float_roundtrip"] }
encode_unicode = "1.0.0"

[dev-dependencies]
criterion = "0.3"
serde_derive = "1.0.163"

[[bench]]
name = "basic"
harness = false
